<resources>
    <string name="app_name">ZTransport</string>
    <string name="tab_title_pallet_report">Pallrapport</string>
    <string name="tab_title_time_report">Tidrapport</string>
    <string name="tab_title_user">Användare</string>
    <string name="shared_prefs_user_id">saved_user_id</string>
    <string name="shared_prefs_user_name">saved_user_name</string>
    <string name="shared_prefs_user_phone_number">saved_user_phone_number</string>
    <string name="shared_prefs_user_email">saved_user_email</string>
    <string name="shared_prefs_is_admin">isAdmin</string>
    <string name="shared_prefs_is_super_admin">isSuperAdmin</string>
    <string name="confirm">Ok</string>
    <string name="cancel">Avbryt</string>
    <string name="user_data_input">Ange uppgifter</string>
    <string name="user_name">Användarnamn</string>
    <string name="your_first_name">Ditt förnamn</string>
    <string name="email">Mailadress</string>
    <string name="phone_number">Telefonnummer</string>
    <string name="error_no_input_from_user">Du måste ange alla uppgifter</string>
    <string name="error_no_input_from_mandatory_fields">Du måste fylla i alla uppgifter</string>
    <string name="error_vibrate">error</string>
    <string name="only_once_message">(Görs bara en gång)</string>
    <string name="error_not_correct_email">Felaktig mailadress</string>
    <string name="activate_update">Uppdatera info</string>
    <string name="update_info">Uppdatera uppgifter</string>
    <string name="shared_preference_name">zTransport_preferences</string>
    <string name="pick_date">Välj datum</string>
    <string name="send_report">Skicka rapport</string>
    <string name="picked_date">Valt datum:</string>
    <string name="pick_costumer">Välj kund:</string>
    <string name="pick_area">Välj område:</string>
    <string name="pick_worked_time">Arbetade timmar:</string>
    <string name="_picked_route">Tur</string>
    <string name="_picked_hours">Timmar</string>
    <string name="work_desc_title">Arbetsbeskrivning:</string>
    <string name="write_here">Skriv här</string>
    <string name="CASSELS">Cassels</string>
    <string name="DHL">DHL</string>
    <string name="DGF">DGF</string>
    <string name="ALLUM">Allum</string>
    <string name="BOHUSLAN">Bohuslän</string>
    <string name="BORAS">Borås</string>
    <string name="HALLAND">Halland</string>
    <string name="GOTEBORG">Göteborg</string>
    <string name="OTHER">Övrig</string>
    <string name="confirm_input">Bekräfta uppgifter</string>
    <string name="input_driver">Förare:</string>
    <string name="input_costumer">Kund:</string>
    <string name="input_hours">Timmar:</string>
    <string name="input_is_route">Tur:</string>
    <string name="input_area">Område:</string>
    <string name="input_work_description">Arbetsbeskrivning:</string>
    <string name="yes">Ja</string>
    <string name="no">Nej</string>
    <string name="input_date">Datum:</string>
    <string name="set_hours">Välj arbetade timmar</string>
    <string name="half_hour">Halvtimma</string>
    <string name="hours">Timmar</string>
    <string name="picked_hours">Timmar:</string>
    <string name="error_network_error">Nätverksfel. Var god kontrollera nätverksanslutning och försök igen.</string>
    <string name="error_network_error_bad_request">Nätverksfel. Servern svarar inte. Var god försök senare.</string>
    <string name="report_success">Rapportering lyckad.</string>
    <string name="report_failed">Rapportering misslyckades. Försök igen.</string>
    <string name="error_no_user_info_changed">Inga uppgifter ändrade.</string>
    <string name="confirm_user_change_input">Bekräfta förändringar</string>
    <string name="input_new_phone_number">Nummer:</string>
    <string name="input_new_email">Mail:</string>
    <string name="input_new_name">Namn:</string>
    <string name="user_info_changed">Förändringar gjorda</string>
    <string name="error_empty_fields">Något fält är tomt</string>
    <string name="not_applicable">N/A</string>
    <string name="empty">\"\"</string>
    <string name="pallet_from">Hämtas från:</string>
    <string name="pallet_to">Lämnas på:</string>
    <string name="pick_no_of_pallets">Antal:</string>
    <string name="no_of_pallets">Antal pallar</string>
    <string name="set_no_of_pallets">Välj antal pallar</string>
    <string name="error_not_picked_pallets">Inga pallar valda</string>
    <string name="error_same_pickup_and_leave_place">Samma hämt- som lämnplats</string>
    <string name="palletBalance">Pallsaldon</string>
    <string name="palletBalanceJAB">JAB</string>
    <string name="palletBalanceHede">Hede</string>
    <string name="palletBalanceFashionService">Fashion Service</string>
    <string name="palletReport">Pallrapportering</string>
    <string name="action_admin">Administration</string>
    <string name="not_authorized">Inte behörig</string>
    <string name="error_message">Nätverksmeddelande:</string>
    <string name="error_getting_last_row">Fel vid hämtning av pallsaldo</string>
    <string name="tab_title_employees">Anställda</string>
    <string name="tab_title_admin_report_view">Rapporter</string>
    <string name="tab_title_admin_generate_report">Skapa rapport</string>
    <string name="action_main_menu">Hem</string>
    <string name="pin_code">Pinkod</string>
    <string name="new_user_data_input">Ny användare</string>
    <string name="error_input_no_match">Uppgifterna stämmer inte</string>
    <string name="error_control_with_admin">Kontrollera uppgifter med administratör</string>
    <string name="new_user_success">Välkommen!</string>
    <string name="start_pallet_report">Påbörja pallrapportering</string>
    <string name="call_failed">Misslyckades. Försök igen senare.</string>
    <string name="reports_logg">Logg</string>
    <string name="filter">Filter</string>
    <string name="type_of_report">Rapporttyp:</string>
    <string name="report_time_interval">Tidsintervall:</string>
    <string name="pick_month_or_week">Välj månad/vecka:</string>
    <string name="update_report_array">Uppdatera listan</string>
    <string name="today">Idag</string>
    <string name="week">Vecka</string>
    <string name="month">Månad</string>
    <string name="pallet">Pall</string>
    <string name="time">Tid</string>
    <string name="wait">Vänta...</string>
    <string name="getting_reports_from_server">Hämtar rapporter från server</string>
    <string name="sorting_reports">Sorterar rapporter</string>
    <string name="getting_pallet_balance">Hämtar aktuellt pallsaldo</string>
    <string name="check_input_is_valid">Kontrollerar uppgifter</string>
    <string name="adding_user">Lägger till användare</string>
    <string name="from">Från</string>
    <string name="to">Till</string>
    <string name="number">Antal</string>
    <string name="driver">Förare</string>
    <string name="input_week">Vecka:</string>
    <string name="changed">Ändrad:</string>
    <string name="reported_by">Rapport av:</string>
    <string name="yes_letter">J</string>
    <string name="no_letter">N</string>
    <string name="no_data_in_list">Inga rapporter hittade</string>
    <string name="sending_pallet_report">Skickar pallrapport.</string>
    <string name="updating_pallet_balance_on_server">Uppdaterar pallsaldo på server.</string>
    <string name="pallet_balance_update_success">Uppdatering av pallsaldo lyckades.</string>
    <string name="pallet_balance_update_failed">Uppdatering av pallsaldo misslyckades.</string>
    <string name="balanceJAB">Saldo JAB</string>
    <string name="input_JAB_pallet_balance">JAB</string>
    <string name="balanceFashionService">Saldo FS</string>
    <string name="balanceHede">Saldo Hede</string>
    <string name="update_pallet_balance">Uppdatera pallsaldo</string>
    <string name="admin_time_report_options">Välj åtgärd</string>
    <string name="edit_time_report">Ändra</string>
    <string name="delete_time_report">Ta bort</string>
    <string name="add_new_time_report">Lägg till ny</string>
    <string name="error_no_button_pressed">Inget val gjort</string>
    <string name="create_and_send_report_file">Skapa och skicka rapportfil</string>
    <string name="pick_month">Välj månad</string>
    <string name="pick_year">Välj år</string>
    <string name="pick_report_content">Välj rapportinnehåll</string>
    <string name="pick_week">Välj vecka</string>
    <string name="pick_report_interval">Välj rapportintervall</string>
    <string name="confirm_report_content">Välj rapportinnehåll</string>
    <string name="error_no_week_picked">Ingen vecka vald</string>
    <string name="confirm_report_message_week">Vill du skapa en rapport för vecka:</string>
    <string name="confirm_report_message_month">Vill du skapa en rapport för år/månad:</string>
    <string name="picked_report_content_message">Rapportinnehåll:</string>
    <string name="error_picked_week_out_of_index">Vald vecka är felaktig</string>
    <string name="year">År</string>
    <string name="day">Dag</string>
    <string name="costumer">Kund</string>
    <string name="area">Område</string>
    <string name="route">Tur</string>
    <string name="workDescription">Beskrivning</string>
    <string name="report_time_stamp">Tid för rapport</string>
    <string name="write_report_success">Skapande av rapport lyckad</string>
    <string name="write_report_failure">Skapande av rapport misslyckad</string>
    <string name="report_is_empty_for_interval">Finns inga rapporter för valt intervall</string>
    <string name="function">Funktion</string>
    <string name="type_of_message">Typ av meddelande</string>
    <string name="free_text">Fritext</string>
    <string name="reminder">Påminnelse</string>
    <string name="send_message">Skicka meddelande</string>
    <string name="has_reported">Rapporterat</string>
    <string name="has_reported_answer">Nej</string>
</resources>
