<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/picked_date"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvPickedDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/bShowDateDialog"
            android:background="@drawable/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/pick_date"
            android:textColor="@drawable/button_text_color"/>/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:text="@string/pick_costumer"
            android:textStyle="bold"/>
        <Spinner
            android:id="@+id/spCostumerPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"/>
        <EditText
            android:id="@+id/etOtherCustomer"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:maxLength="15"
            android:maxLines="1"
            android:gravity="center"
            android:background="@drawable/textinputborder"
            android:inputType="text"
            android:textColor="@color/primary_text">
        </EditText>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:textStyle="bold"
            android:text="@string/pick_area"/>
        <Spinner
            android:id="@+id/spAreaPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"/>
        <EditText
            android:id="@+id/etOtherArea"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:maxLength="15"
            android:maxLines="1"
            android:gravity="center"
            android:background="@drawable/textinputborder"
            android:inputType="text"
            android:textColor="@color/primary_text">
        </EditText>
        <TextView
            android:id="@+id/workDescTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/work_desc_title"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etWorkDescription"
            android:layout_width="220dp"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:maxLength="100"
            android:maxLines="5"
            android:background="@drawable/textinputborder"
            android:hint="@string/write_here"
            android:gravity="center"
            android:textColor="@color/primary_text"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_worked_time"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:textStyle="bold"/>
        <RadioGroup
            android:id="@+id/rgHourPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <RadioButton android:id="@+id/rbRoute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_picked_route"/>
            <RadioButton android:id="@+id/rbHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_picked_hours"/>
        </RadioGroup>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:text="@string/picked_hours"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tvWorkedHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>
        <Button
            android:id="@+id/bConfirmAndSendTimeReport"
            android:background="@drawable/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/send_report"
            android:textColor="@drawable/button_text_color"/>
    </LinearLayout>
</ScrollView>