<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <ListView
            android:id="@+id/lvEmployees"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primary" >
        </ListView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textStyle="bold"
                android:text="@string/type_of_message"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <CheckBox
                        android:id="@+id/cbReminder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/reminder"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <CheckBox
                        android:id="@+id/cbFreeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/free_text"/>
                </LinearLayout>
            </LinearLayout>
            <EditText
                android:id="@+id/etTextToEmployees"
                android:layout_width="220dp"
                android:layout_height="130dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:maxLength="250"
                android:maxLines="10"
                android:background="@drawable/textinputborder"
                android:hint="@string/write_here"
                android:gravity="center"
                android:textColor="@color/primary_text"
                android:layout_gravity="center_horizontal"/>
            <Button
                android:id="@+id/bSendMessageToEmployees"
                android:background="@drawable/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/send_message"
                android:textColor="@drawable/button_text_color"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>